# precision-recall-portfolio

./: .gitignore  CLAUDE.md  Precision_Recall_Tradeoff.csv  README.md  SP500Current.csv  TODO.md  constituents.py  pickn.py  pyproject.toml  simulate_model.py
data/: SP500_history.csv
docs/: delisted-data-providers.md  sharadar_docs.md
tests/: smoke_test.py  test_benchmarks_and_weights.py  test_constituents_loader.py  test_download_adj_close_cache.py  test_exclude_top.py  test_fix.py  test_horizon.py  test_screen.py  test_simulate_model.py  test_sweep.py  test_year_universe_returns.py
