[project]
name = "pickn-simulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "html5lib>=1.1",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "nasdaq-data-link>=1.0.4",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "requests>=2.32.5",
]
